fix:add js for dark mode + fix styles

--- a/css/style.css
+++ b/css/style.css
@@ -36,23 +36,25 @@
   --color-green-light: #00beb0;
 
   --color-green: #1eb35b;
-  --color-lamp: #f0ef7c;
 
   --color-theme: #f3f4f6;
+  --color-theme-link-text: #1eb35b;
   --color-theme-wrapper: #fff;
   --color-theme-text: #000;
   --color-theme-text-light: #676767;
   --color-theme-bg-light: #f3f4f6;
   --color-theme-link-active: #1eb35b;
+  --color-lamp: #f0ef7c;
 
   font-family: "Vazir";
 }
 body.dark-theme {
   --color-theme: #111827;
+  --color-theme-link-text: #111827;
   --color-theme-wrapper: #64748b;
   --color-theme-text: #fff;
   --color-gray-light: #fff;
-  --color-theme-text-light: #676767;
+  --color-theme-text-light: #fff;
   --color-theme-bg-light: #f3f4f6;
   --color-theme-link-active: #0a97d4;
   --color-lamp: #abf9ff;
@@ -73,7 +75,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--color-white);
+  background-color: var(--color-theme-wrapper);
   box-shadow: 0 0 2px 1px var(--color-gray-light);
   backdrop-filter: blur(10px);
 }
@@ -109,7 +111,7 @@ body {
   position: relative;
   text-align: center;
   font-size: 18px;
-  color: var(--color-black);
+  color: var(--color-theme-text);
   &::after {
     content: "";
     height: 3px;
@@ -127,7 +129,7 @@ body {
   &.active {
     font-family: "Vazir-bold";
     font-weight: 600;
-    color: var(--color-theme-link-active);
+    color: var(--color-theme-link-text);
   }
 }
 
@@ -153,6 +155,7 @@ body {
   left: 6px;
   border-radius: 50%;
   background-color: var(--color-lamp);
+  transition: left 0.5s ease;
 }
 
 /*helper classes*/
@@ -169,9 +172,11 @@ main {
 
 /*footer*/
 footer {
+  position: fixed;
+  bottom: 0;
   width: 100vw;
   height: auto;
-  background-color: var(--color-white);
+  background-color: var(--color-theme-wrapper);
   box-shadow: 0 0 2px 1px var(--color-gray-light);
   backdrop-filter: blur(10px);
 }
@@ -189,18 +194,18 @@ footer {
 }
 
 .footer__wrapper__socials ul {
-  padding: 48px 0 20px;
+  padding: 32px 0 20px;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 48px;
+  gap: 64px;
 }
 .footer__wrapper__socials ul li {
   cursor: pointer;
   background-color: var(--color-theme-bg-light);
   border-radius: 50%;
-  width: 64px;
-  height: 64px;
+  width: 52px;
+  height: 52px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -212,18 +217,18 @@ footer {
 }
 
 .footer__wrapper__socials ul li a img {
-  width: 42px;
+  width: 32px;
 }
 .footer__wrapper__links ul {
   display: flex;
   align-items: center;
   justify-content: center;
   direction: rtl;
-  padding: 20px 0 40px;
+  padding: 20px 0 20px;
   gap: 120px;
 }
 .footer__wrapper__links ul li {
-  font-size: 20px;
+  font-size: 16px;
   color: var(--color-theme-text-light);
   transition: all 300ms ease;
   &:hover {
